Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T6326693/FinalVariableAssignedToInCatchBlockTest.out
FinalVariableAssignedToInCatchBlockTest.java:29:13: compiler.err.var.might.already.be.assigned: i
FinalVariableAssignedToInCatchBlockTest.java:69:9: compiler.err.var.might.already.be.assigned: i
2 errors
